# reckonsys-llm-core

./: .gitignore  .pre-commit-config.yaml  README.md  llms.txt  pyproject.toml
docs/: api-changes.md  index.md
docs/guides/: batch-processing.md  helpers.md  streaming.md  structured-output.md  thinking-reasoning.md  tool-calling.md
docs/providers/: claude.md  ollama.md  openai.md
docs/reference/: types.md
examples/: 01_sync_query.py  02_sync_structured.py  03_async_query.py  04_async_streaming.py  05_batch_processing.py  06_ollama.py  07_bedrock.py  08_prompt_templates.py  09_multi_turn.py  10_custom_tools.py  11_claude_web_search.py  12_fn_tools.py  13_document_citations.py
src/reckonsys_llm_core/: __init__.py  _utils.py  client.py  fn_tools.py  helpers.py  llms.txt  strategy.py  templates.py  types.py
src/reckonsys_llm_core/stratagies/: __init__.py  claude.py  ollama.py
src/reckonsys_llm_core/strategies/: __init__.py  claude.py  ollama.py  openai.py
