[project]
name = "reckonsys-llm-core"
version = "0.1.0+1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.84.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reckonsys_llm_core"]
