[project]
name = "reckonsys-llm-core"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.84.0",
]
ollama = [
    "ollama>=0.6.1",
]
templates = [
    "jinja2>=3.1",
]
all = [
    "anthropic>=0.84.0",
    "ollama>=0.6.1",
    "jinja2>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reckonsys_llm_core"]

[tool.hatch.build.targets.wheel.force-include]
"src/reckonsys_llm_core/llms.txt" = "reckonsys_llm_core/llms.txt"
