[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reckonsys-llm-core"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12",
]

[project.optional-dependencies]
claude = [
    "anthropic>=0.84.0",
]
ollama = [
    "ollama>=0.6.1",
]
openai = [
    "openai>=2.29.0",
]
templates = [
    "jinja2>=3.1",
]
all = [
    "anthropic>=0.84.0",
    "ollama>=0.6.1",
    "openai>=2.29.0",
    "jinja2>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reckonsys_llm_core"]

[tool.hatch.build.targets.wheel.force-include]
"src/reckonsys_llm_core/llms.txt" = "reckonsys_llm_core/llms.txt"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
